[package]
name = "kvs"
version = "0.1.0"
authors = ["Joe Schafer <joe@schafer.dev>"]
edition = "2018"
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.0"
failure = "~0.1.5"
serde = { version = "~1.0.98", features = ["derive"] }
serde_json = "~1.0.40"
byteorder = "~0.3.2"
regex = "~1.2.1"
lazy_static = "~1.3.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
